# nexoeditor

./: .gitignore  CMakeLists.txt  README
include/: buffer.h  cursor.h
include/core/: buffer.h  cursor.h  input.h  mem.h  renderer.h  state.h
include/tests/: buffer.h
src/: buffer.c  cursor.c  main.c  mem.c  renderer.c
src/core/: buffer.c  cursor.c  input.c  mem.c  renderer.c  state.c
src/nexo/: main.c
src/tests/: buffer.c  tests.c
